# dunelegacy

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  ChangeLog  Doxyfile  Folder.DotSettings  INSTALL  Makefile.am  NEWS  README  README.md  SoftwareDesign.txt  ToDo.txt  buildclangdebug.sh  buildcrosswin32.sh  builddebug.sh  buildlocal.sh  clean.sh  configure.ac  dunelegacy-0.96.3.ebuild  dunelegacy-0.96.4.ebuild  dunelegacy.6  dunelegacy.desktop  dunelegacy.icns  dunelegacy.nsi  dunelegacy.spec  resource.rc  runUnitTests.sh  scanbuild.sh  updatelocale.sh
data/maps/: CMakeLists.txt
src/: AStarSearch.cpp  Bullet.cpp  CMakeLists.txt  Choam.cpp  Command.cpp  CommandManager.cpp  Explosion.cpp  Game.cpp  GameInitSettings.cpp  GameInterface.cpp  House.cpp  Makefile.am  Map.cpp  MapSeed.cpp  ObjectBase.cpp  ObjectData.cpp  ObjectManager.cpp  ObjectPointer.cpp  RadarView.cpp  RadarViewBase.cpp  ScreenBorder.cpp  SoundPlayer.cpp  Tile.cpp  globals.cpp  logging.cpp  main.cpp  mmath.cpp  sand.cpp  sources.cmake  stdafx.h
src/CutScenes/: CrossBlendVideoEvent.cpp  CutScene.cpp  CutSceneTrigger.cpp  FadeInVideoEvent.cpp  FadeOutVideoEvent.cpp  Finale.cpp  HoldPictureVideoEvent.cpp  Intro.cpp  Meanwhile.cpp  Scene.cpp  TextEvent.cpp  VideoEvent.cpp  WSAVideoEvent.cpp  sources.cmake
src/FileClasses/: Animation.cpp  Cpsfile.cpp  Decode.cpp  DuneConfig.cpp  FileManager.cpp  Fntfile.cpp  Font.cpp  FontManager.cpp  GFXManager.cpp  INIFile.cpp  INIFile.natvis  Icnfile.cpp  IndexedTextFile.cpp  LoadSavePNG.cpp  MentatTextFile.cpp  POFile.cpp  Pakfile.cpp  Palette.cpp  Palfile.cpp  PictureFactory.cpp  PictureFont.cpp  SFXManager.cpp  SaveTextureAsBmp.cpp  SaveWAV.cpp  Shpfile.cpp  SurfaceLoader.cpp  TTFFont.cpp  TextManager.cpp  Vocfile.cpp  Wsafile.cpp  lodepng.cpp  sources.cmake
src/GUI/: Button.cpp  Checkbox.cpp  DropDownBox.cpp  GUIStyle.cpp  HBox.cpp  Label.cpp  ListBox.cpp  MsgBox.cpp  PictureButton.cpp  PictureLabel.cpp  ProgressBar.cpp  QstBox.cpp  RadioButton.cpp  RadioButtonManager.cpp  ScrollBar.cpp  Spacer.cpp  StaticContainer.cpp  TextBox.cpp  TextButton.cpp  TextView.cpp  VBox.cpp  Widget.cpp  WidgetWithBackground.cpp  Window.cpp  sources.cmake
src/INIMap/: INIMap.cpp  INIMapEditorLoader.cpp  INIMapLoader.cpp  INIMapPreviewCreator.cpp  sources.cmake
src/MapEditor/: ChoamWindow.cpp  LoadMapWindow.cpp  MapEditor.cpp  MapEditorInterface.cpp  MapEditorOperation.cpp  MapEditorRadarView.cpp  MapGenerator.cpp  MapMirror.cpp  MapSettingsWindow.cpp  NewMapWindow.cpp  PlayerSettingsWindow.cpp  ReinforcementsWindow.cpp  TeamsWindow.cpp  sources.cmake
src/Menu/: AboutMenu.cpp  BriefingMenu.cpp  CampaignStatsMenu.cpp  CustomGameMenu.cpp  CustomGamePlayers.cpp  CustomGameStatsMenu.cpp  HouseChoiceInfoMenu.cpp  HouseChoiceMenu.cpp  MainMenu.cpp  MapChoice.cpp  MentatHelp.cpp  MentatMenu.cpp  MenuBase.cpp  MultiPlayerMenu.cpp  OptionsMenu.cpp  SinglePlayerMenu.cpp  SinglePlayerSkirmishMenu.cpp  sources.cmake
src/Network/: ChangeEventList.cpp  ENetHttp.cpp  LANGameFinderAndAnnouncer.cpp  MetaServerClient.cpp  NetworkManager.cpp  sources.cmake
src/Renderer/: DuneRenderer.cpp  DuneRotateTexture.cpp  DuneSurface.cpp  DuneTexture.cpp  DuneTextures.cpp  DuneTileTexture.cpp  sources.cmake
src/Trigger/: ReinforcementTrigger.cpp  TimeoutTrigger.cpp  TriggerManager.cpp  sources.cmake
src/cmake/: locale-update.cmake
src/enet/: protocol.c  unix.c  win32.c
src/engine/: AStarSearch.cpp  Bullet.cpp  CMakeLists.txt  Choam.cpp  Command.cpp  CommandManager.cpp  Explosion.cpp  Game.cpp  GameInitSettings.cpp  House.cpp  Map.cpp  ObjectBase.cpp  ObjectData.cpp  ObjectManager.cpp  ObjectPointer.cpp  Tile.cpp  engine_sand.cpp
src/fixmath/: fix16.c  fix16_exp.c  fix16_sqrt.c  fix16_str.c  fix16_trig.c  fix32.c  fix32_exp.c  fix32_sqrt.c  fix32_str.c  fix32_trig.c  fixmath.natvis  sources.cmake
src/libfixmath/: fix16.c  fix16_exp.c  fix16_sqrt.c  fix16_str.c  fix16_trig.c  fix32.c  fix32_exp.c  fix32_sqrt.c  fix32_str.c  fix32_trig.c
src/macOS/: CMakeLists.txt  MacFunctions.m
src/misc/: BlendBlitter.cpp  FileSystem.cpp  Fullscreen.cpp  IFileStream.cpp  IMemoryStream.cpp  InputStream.cpp  OFileStream.cpp  OMemoryStream.cpp  OutputStream.cpp  Random.cpp  RngSupport.cpp  SDL_LogRenderer.cpp  Scaler.cpp  draw_util.cpp  dune_events.cpp  dune_localtime.cpp  dune_timer_resolution.cpp  dune_wait_event.cpp  fnkdat.cpp  format.cpp  md5.cpp  sound_util.cpp  sources.cmake  strictmath.cpp  string_util.cpp
src/players/: AIPlayer.cpp  CampaignAIPlayer.cpp  HumanPlayer.cpp  OldAIPlayer.cpp  Player.cpp  PlayerFactory.cpp  QuantBot.cpp  SmartBot.cpp  sources.cmake
src/structures/: Barracks.cpp  BuilderBase.cpp  ConstructionYard.cpp  GunTurret.cpp  HeavyFactory.cpp  HighTechFactory.cpp  IX.cpp  LightFactory.cpp  Palace.cpp  Radar.cpp  Refinery.cpp  RepairYard.cpp  RocketTurret.cpp  Silo.cpp  StarPort.cpp  StructureBase.cpp  TurretBase.cpp  WOR.cpp  Wall.cpp  WindTrap.cpp  sources.cmake
src/units/: AirUnit.cpp  Carryall.cpp  Devastator.cpp  Deviator.cpp  Frigate.cpp  GroundUnit.cpp  Harvester.cpp  InfantryBase.cpp  Launcher.cpp  MCV.cpp  Ornithopter.cpp  Quad.cpp  RaiderTrike.cpp  Saboteur.cpp  SandWorm.cpp  SiegeTank.cpp  Soldier.cpp  SonicTank.cpp  Tank.cpp  TankBase.cpp  TrackedUnit.cpp  Trike.cpp  Trooper.cpp  UnitBase.cpp  sources.cmake
src/utility/: CMakeLists.txt
tests/: CMakeLists.txt  Makefile.am  testmain.cpp
tests/FileSystemTestCase/: CMakeLists.txt  FileSystemTestCase.cpp  FileSystemTestCase.h
tests/INIFileTestCase/: CMakeLists.txt  INIFileTestCase1.cpp  INIFileTestCase1.h  INIFileTestCase1.ini  INIFileTestCase2.cpp  INIFileTestCase2.h  INIFileTestCase2.ini  INIFileTestCase2.ini.ref1  INIFileTestCase2.ini.ref2  INIFileTestCase2.ini.ref3  INIFileTestCase3.cpp  INIFileTestCase3.h  INIFileTestCase3.ini.ref1  INIFileTestCase3.ini.ref2  INIFileTestCase3.ini.ref3  INIFileTestCase3.ini.ref4  INIFileTestSimple.cpp  InitGameTestCase.cpp
tests/StrictMathTestCase/: StrictMathTestCaseACos.cpp  abs.ref  (+29 more)
(+624 files in other folders)
